[package]
name = "secmem-proc"
version = "0.1.0"
authors = ["niluxv <niluxv.opensource.C-h2ty6xl@yandex.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Process hardening through system APIs"
readme = "README.md"
categories = ["no-std", "cryptography", "os"]
keywords = ["secure", "memory", "process", "hardening"]
repository = "https://github.com/niluxv/secmem-proc"
include = ["src/**/*", "COPYING", "LICENSE.*", "README.md"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["thiserror"]
# expose minimal rlimit api on unix-like systems in the `rlimit` module
rlimit = []
# required features to run tests; additional features enable more tests
dev = []

[dependencies]
cfg-if = "1.0"
libc = "0.2"
thiserror = {version = "1.0", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["securitybaseapi", "accctrl", "aclapi", "winerror", "handleapi"] }
